--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,13 @@
     <string name="STORAGE_INTERNAL">internal</string>
     <string name="STORAGE_EXTERNAL">external</string>
 
-    <string name="title_activity_route_list">@string/app_name</string>
-    <string name="title_activity_route_build">Map</string>
+    <string name="title_activity_main">@string/app_name</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_exit">Exit</string>
+
+
 </resources>
